--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vite": "^5.0.0",
     "tailwindcss": "^4.0.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.0",
     "@vitejs/plugin-react": "^4.3.0"
   }
 }
