--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-    "react-router-dom": "^6.23.1"
-  },
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-router-dom": "^6.23.1",
+  "vite": "^5.0.0"
+}
+
   "devDependencies": {
     "vite": "^5.0.0",
     "tailwindcss": "^3.3.0",
